--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
     <div class="tasklist">
       <h2>Task List App</h2>
 
-      <form action="/add" method="POST">
+      <form action="/addtask" method="POST">
+
         <input type="text" name="newtask" placeholder="add new task" />
         <button>Add Task</button>
 
@@ -20,8 +21,17 @@
           task[i] %>
         </li>
         <% } %>
-        <h2>Complete</h2>
-      </form>
+
+        <button formaction="/removetask" type="submit" id="top"> Remove</button>
+        
+        </form>
+
+        <h2>Complete Task</h2>
+
+        <% for(let i = 0; i < complete.length; i++){ %>
+          <li><input type="checkbox"
+            checked><%= complete[i]%></li>
+        <% } %>
     </div>
   </body>
 </html>
