--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
   <body>
     <div class="tasklist">
-      <h2>Task List App</h2>
+      <h2><%= title %></h2>
 
       <form action="/addtask" method="POST">
 
